# EvoCom

./: CMakeLists.txt  Makefile  README.md  main.cpp  names.hpp
AbstractBit/: CMakeLists.txt
AbstractBit/AbstractBitReader/: AbstractBitReader.cpp  AbstractBitReader.hpp  CMakeLists.txt
AbstractBit/AbstractBitWriter/: AbstractBitWriter.cpp  AbstractBitWriter.hpp  CMakeLists.txt
AbstractBit/BitCounter/: BitCounter.cpp  BitCounter.hpp  CMakeLists.txt
AbstractBit/DebugBitWriter/: CMakeLists.txt  DebugWriter.cpp  DebugWriter.hpp
AbstractBit/FileBitReader/: FileBitReader.hpp
AbstractBit/FileBitWriter/: CMakeLists.txt  FileBitWriter.cpp  FileBitWriter.hpp
AbstractBit/VectorBitReader/: CMakeLists.txt  VectorBitReader.cpp  VectorBitReader.hpp
AbstractBit/VectorBitWriter/: CMakeLists.txt  VectorBitWriter.cpp  VectorBitWriter.hpp
BlockReport/: BlockReport.cpp  BlockReport.hpp  CMakeLists.txt
Breeder/: Breeder.hpp  CMakeLists.txt
Compression/: CMakeLists.txt  Compression.cpp  Compression.hpp
Compression/ANSCompression/: ANSCompression.cpp  ANSCompression.hpp  CMakeLists.txt
Compression/HuffmanCompression/: CMakeLists.txt  HuffmanCompression.cpp  HuffmanCompression.hpp
Compression/IdentityCompression/: CMakeLists.txt  IdentityCompression.cpp  IdentityCompression.hpp
Compression/LZWCompression/: CMakeLists.txt  LZW.hpp  LZWCompression.cpp  LZWCompression.hpp
Compression/NRLCompression/: CMakeLists.txt  NRLCompression.cpp  NRLCompression.hpp
Compression/RunLengthCompression/: CMakeLists.txt  RunLengthCompression.cpp  RunLengthCompression.hpp
Compression/SmallValueCompression/: CMakeLists.txt  SmallValueCompression.cpp  SmallValueCompression.hpp
DataProcessingUtilities/: CMakeLists.txt
DataProcessingUtilities/JSON2CSV/: CMakeLists.txt  JSON2CSV.cpp  JSON2CSV.hpp
DecisionTree/: CMakeLists.txt  DecisionTree.cpp  DecisionTree.hpp
Dependencies/: CMakeLists.txt
Dependencies/LZW/: CMakeLists.txt  LZW.cpp  LZW.hpp
Dependencies/SAIS/: CMakeLists.txt  sais.c  sais.h
Evaluator/: CMakeLists.txt  Evaluator.hpp
EvolutionaryFileCompressor/: CMakeLists.txt  CompressionAndTransformationDispatch.cpp  EvolutionaryFileCompressor.cpp  EvolutionaryFileCompressor.hpp
EvolutionaryFileCompressor/EvoCompressorSettings/: CMakeLists.txt  EvoComSettings.cpp  EvoComSettings.hpp
Evolver/: CMakeLists.txt  Evolver.cpp  Evolver.hpp
Evolver/Breeder/: Breeder.cpp  Breeder.hpp  CMakeLists.txt
Evolver/Evaluator/: CMakeLists.txt  Evaluator.cpp  Evaluator.hpp
Evolver/Evaluator/BitCounter/: BitCounter.hpp
Evolver/Individual/: CCodes.hpp  Individual.hpp  TCodes.hpp
Evolver/PseudoFitness/: CMakeLists.txt  PseudoFitness.cpp  PseudoFitness.hpp
Evolver/Recipe/: CMakeLists.txt  Recipe.cpp  Recipe.hpp  TCodes.hpp
Evolver/Selector/: CMakeLists.txt  Selector.hpp
FileBitReader/: CMakeLists.txt  FileBitReader.cpp  FileBitReader.hpp
FileBitWriter/: CMakeLists.txt  FileBitWriter.cpp  FileBitWriter.hpp
HuffmanCoder/: CMakeLists.txt  HuffmanCoder.cpp  HuffmanCoder.hpp
Individual/: CCodes.hpp  CMakeLists.txt  Individual.cpp  Individual.hpp  TCodes.hpp
PseudoFitness/: PseudoFitness.hpp
Random/: CMakeLists.txt  RandomChance.cpp  RandomChance.hpp  RandomElement.cpp  RandomElement.hpp  RandomIndex.cpp  RandomIndex.hpp  RandomInt.cpp  RandomInt.hpp
SampleFiles/: compressed.gac  images.txt  repetition.txt  silesia.txt  webpage.html
SegmentData/: CMakeLists.txt  SegmentData.cpp  SegmentData.hpp
Selector/: CMakeLists.txt  Selector.cpp  Selector.hpp
SimpleCompressor/: CMakeLists.txt  SimpleCompressor.cpp  SimpleCompressor.hpp
StatisticalFeatures/: CMakeLists.txt  RunningAverage.cpp  RunningAverage.hpp  StatisticalFeatures.cpp  StatisticalFeatures.hpp
Testing/: AbstractBitWriter_tests.cpp  BlockReport_tests.cpp  CMakeLists.txt  Compression_tests.cpp  StreamingClusterer_tests.cpp  Transformation_tests.cpp  integration_tests.cpp
Transformation/: CMakeLists.txt  Transformation.cpp  Transformation.hpp
Transformation/Transformations/: BurrowsWheelerTransform.cpp  BurrowsWheelerTransform.hpp  CMakeLists.txt  DeltaTransform.cpp  DeltaTransform.hpp  DeltaXORTransform.cpp  DeltaXORTransform.hpp  IdentityTransform.cpp  IdentityTransform.hpp  LempelZivWelchTransform.cpp  LempelZivWelchTransform.hpp  RunLengthTransform.cpp  RunLengthTransform.hpp  SplitTransform.cpp  SplitTransform.hpp  StackTransform.cpp  StackTransform.hpp  StrideTransform.cpp  StrideTransform.hpp  SubMinAdaptiveTransform.cpp  SubMinAdaptiveTransform.hpp  SubtractAverageTransform.cpp  SubtractAverageTransform.hpp  SubtractXORAverageTransform.cpp  SubtractXORAverageTransform.hpp
Utilities/: CMakeLists.txt  utilities.cpp  utilities.hpp
Utilities/JSONer/: JSONer.cpp  JSONer.hpp
Utilities/Logger/: Logger.cpp  Logger.hpp
Utilities/StreamingClusterer/: CMakeLists.txt  StreamingClusterer.cpp  StreamingClusterer.hpp
configuration/: fast.config  images.txt  silesia.txt  simple.config
