add_library(DeltaTransform DeltaTransform.hpp DeltaTransform.cpp)
add_library(DeltaXORTransform DeltaXORTransform.hpp DeltaXORTransform.cpp)
add_library(RunLengthTransform RunLengthTransform.hpp RunLengthTransform.cpp)
add_library(SplitTransform SplitTransform.hpp SplitTransform.cpp)
add_library(StrideTransform StrideTransform.hpp StrideTransform.cpp)
add_library(SubtractAverageTransform SubtractAverageTransform.hpp SubtractAverageTransform.cpp)
add_library(SubtractXORAverageTransform SubtractXORAverageTransform.hpp SubtractXORAverageTransform.cpp)
add_library(IdentityTransform IdentityTransform.cpp IdentityTransform.hpp)
add_library(StackTransform StackTransform.cpp StackTransform.hpp)
add_library(LempelZivWelchTransform LempelZivWelchTransform.cpp LempelZivWelchTransform.hpp)
add_library(BWTransform BurrowsWheelerTransform.cpp BurrowsWheelerTransform.hpp)
