add_library(DeltaTransform DeltaTransform.hpp DeltaTransform.cpp)
add_library(DeltaXORTransform DeltaXORTransform.hpp DeltaXORTransform.cpp)
add_library(RunLengthTransform RunLengthTransform.hpp RunLengthTransform.cpp)
add_library(SplitTransform SplitTransform.hpp SplitTransform.cpp)
add_library(StrideTransform StrideTransform.hpp StrideTransform.cpp)
add_library(SubtractAverageTransform SubtractAverageTransform.hpp SubtractAverageTransform.cpp)
add_library(SubtractXORAverageTransform SubtractXORAverageTransform.hpp SubtractXORAverageTransform.cpp)
add_library(IdentityTransform IdentityTransform.cpp IdentityTransform.hpp)
add_library(StackTransform StackTransform.cpp StackTransform.hpp)
add_library(LempelZivWelchTransform LempelZivWelchTransform.cpp LempelZivWelchTransform.hpp)
target_link_libraries(LempelZivWelchTransform LZW)
add_library(BurrowsWheelerTransform BurrowsWheelerTransform.cpp BurrowsWheelerTransform.hpp)
target_link_libraries(BurrowsWheelerTransform SAIS )
add_library(SubMinimumAdaptiveTransform SubMinAdaptiveTransform.cpp SubMinAdaptiveTransform.hpp)
